implmentando bloc e instalando paquete de firebase

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.8
   equatable: ^2.0.8
+  firebase_messaging: ^16.1.1
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
